feat: enable writes and restore golden master transport

--- a/config/projects/pavers_miami.yaml
+++ b/config/projects/pavers_miami.yaml
@@ -20,7 +20,7 @@ site:
 api:
   username: "gra8g1"
   app_password: "su6J Ehkv yhH8 Di9S zJPP azPw"
-  mode: "read_only"
+  mode: "apply_draft"
 
 # -----------------------------------------------------
 # KNOWLEDGE GRAPH - SITE HIERARCHY
